# eibais-mlops-excercise

./: .env-template  .env.template  README.md  pyproject.toml
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/: meta.yaml
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/0a23b0a704184a569dd87e452f139104/: meta.yaml
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/0a23b0a704184a569dd87e452f139104/metrics/: epoch  eval_accuracy  eval_loss  eval_runtime  eval_samples_per_second  eval_steps_per_second
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/0a23b0a704184a569dd87e452f139104/tags/: mlflow.source.git.commit
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/4641ba557d224faf987ef9e612521c96/: meta.yaml
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/4641ba557d224faf987ef9e612521c96/metrics/: epoch  eval_accuracy  eval_loss  eval_runtime  eval_samples_per_second  eval_steps_per_second  total_flos  train_loss  train_runtime  train_samples_per_second  train_steps_per_second
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/a39d53c791494fd28a0a1fe2a6450466/: meta.yaml
MLFLOW_TRACKING_URI=https:/dagshub.com/SntSca/eibais-mlops-excercise.mlflow/0/e54944303b6044efbbc9c3e4b9b99c7b/: meta.yaml
data/processed/: test.parquet  validation.parquet
models/: .gitignore
src/: config.py  main.py
(+33 files in other folders)
